Map data formats and dashboards

--- a/01-maps-data/01-data_and_plots.ipynb
+++ b/01-maps-data/01-data_and_plots.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:42.007229896Z",
-     "start_time": "2023-06-01T01:36:39.824782599Z"
+     "end_time": "2023-06-01T21:17:25.844280192Z",
+     "start_time": "2023-06-01T21:17:23.962162733Z"
     }
    },
    "outputs": [
@@ -54,6 +54,8 @@
     "        local, _ = urlretrieve(url, filename)\n",
     "        print('Downloaded ' + local)\n",
     "\n",
+    "# The data utilities above are available in utils.py\n",
+    "\n",
     "download('https://naciscdn.org/naturalearth/10m/cultural/' + \n",
     "         'ne_10m_populated_places_simple.zip')\n",
     "\n",
@@ -68,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:42.104206432Z",
-     "start_time": "2023-06-01T01:36:42.102396191Z"
+     "end_time": "2023-06-01T21:17:25.914002154Z",
+     "start_time": "2023-06-01T21:17:25.906498786Z"
     }
    },
    "outputs": [
@@ -156,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:42.345594838Z",
-     "start_time": "2023-06-01T01:36:42.105135462Z"
+     "end_time": "2023-06-01T21:17:25.916481506Z",
+     "start_time": "2023-06-01T21:17:25.914737974Z"
     }
    },
    "outputs": [],
@@ -171,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:44.563338906Z",
-     "start_time": "2023-06-01T01:36:42.345937634Z"
+     "end_time": "2023-06-01T21:17:27.783942015Z",
+     "start_time": "2023-06-01T21:17:25.918496015Z"
     }
    },
    "outputs": [],
@@ -215,11 +217,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:44.834496764Z",
-     "start_time": "2023-06-01T01:36:44.586001988Z"
+     "end_time": "2023-06-01T21:17:28.033387821Z",
+     "start_time": "2023-06-01T21:17:27.790492104Z"
     }
    },
    "outputs": [
@@ -257,11 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:45.138620093Z",
-     "start_time": "2023-06-01T01:36:44.833640551Z"
+     "end_time": "2023-06-01T21:17:28.273330397Z",
+     "start_time": "2023-06-01T21:17:28.032026036Z"
     }
    },
    "outputs": [
@@ -291,11 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:36:45.334355215Z",
-     "start_time": "2023-06-01T01:36:45.189560880Z"
+     "end_time": "2023-06-01T21:17:28.486655184Z",
+     "start_time": "2023-06-01T21:17:28.343470794Z"
     }
    },
    "outputs": [
