--- a/01-maps-data/02-geopandas_map_plots.ipynb
+++ b/01-maps-data/02-geopandas_map_plots.ipynb
@@ -15,8 +15,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:32:51.520634904Z",
-     "start_time": "2023-06-01T01:32:51.510566791Z"
+     "end_time": "2023-06-01T21:18:22.914895305Z",
+     "start_time": "2023-06-01T21:18:22.250000421Z"
     }
    },
    "outputs": [],
@@ -27,20 +27,7 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "data_folder = 'data'\n",
-    "output_folder = 'output'\n",
-    "\n",
-    "if not os.path.exists(data_folder):\n",
-    "    os.mkdir(data_folder)\n",
-    "if not os.path.exists(output_folder):\n",
-    "    os.mkdir(output_folder)\n",
-    "\n",
-    "def download(url):\n",
-    "    filename = os.path.join(data_folder, os.path.basename(url))\n",
-    "    if not os.path.exists(filename):\n",
-    "        from urllib.request import urlretrieve\n",
-    "        local, _ = urlretrieve(url, filename)\n",
-    "        print('Downloaded ' + local)"
+    "import utils"
    ]
   },
   {
@@ -54,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -98,14 +85,14 @@
     "\n",
     "for ext in shapefile_exts:\n",
     "  url = data_url + shapefile_name + ext\n",
-    "  download(url)\n",
+    "  utils.download(url)\n",
     "\n",
     "csv_name = 'ACSST5Y2019.S0101_data.csv'\n",
-    "download(data_url + csv_name)\n",
+    "utils.download(data_url + csv_name)\n",
     "\n",
-    "shapefile_path = os.path.join(data_folder, shapefile_name + '.shp')\n",
+    "shapefile_path = os.path.join(utils.data_folder, shapefile_name + '.shp')\n",
     "tracts = gpd.read_file(shapefile_path)\n",
-    "csv_path = os.path.join(data_folder, csv_name)\n",
+    "csv_path = os.path.join(utils.data_folder, csv_name)\n",
     "population_table = pd.read_csv(csv_path, skiprows=[1])\n",
     "\n",
     "# Check the data setup\n",
@@ -126,14 +113,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:35:24.579045748Z",
-     "start_time": "2023-06-01T01:35:20.778506265Z"
+     "end_time": "2023-06-01T21:18:26.321740353Z",
+     "start_time": "2023-06-01T21:18:22.917653590Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -146,7 +133,7 @@
    ],
    "source": [
     "# Plot the map with region color based on pop. density and save as a png\n",
-    "output_path = os.path.join(output_folder, 'california_pop.png')\n",
+    "output_path = os.path.join(utils.output_folder, 'california_pop.png')\n",
     "\n",
     "fig, ax = plt.subplots(1, 1)\n",
     "fig.set_size_inches(10,10)\n",
@@ -163,14 +150,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:42:01.641835012Z",
-     "start_time": "2023-06-01T01:41:59.291492236Z"
+     "end_time": "2023-06-01T21:18:28.882747522Z",
+     "start_time": "2023-06-01T21:18:26.323596465Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
@@ -183,7 +170,7 @@
    ],
    "source": [
     "# Plot the same map without fill to emphasize the tracts\n",
-    "output_path = os.path.join(output_folder, 'california_pop.png')\n",
+    "image_path = os.path.join(utils.results_folder, 'california_pop.png')\n",
     "\n",
     "fig, ax = plt.subplots(1, 1)\n",
     "fig.set_size_inches(10,10)\n",
@@ -193,15 +180,15 @@
     "ax.set_axis_off()\n",
     "ax.set_title('California Population Density (2019)', size = 18)\n",
     "\n",
-    "plt.savefig(output_path, dpi=300)\n",
+    "plt.savefig(image_path, dpi=300)\n",
     "\n",
     "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-01T01:42:27.154808556Z",
-     "start_time": "2023-06-01T01:42:22.906023591Z"
+     "end_time": "2023-06-01T21:18:32.781548982Z",
+     "start_time": "2023-06-01T21:18:28.893426157Z"
     }
    }
   }
